# PyMooerLooperManager

./: .gitignore  60-mooer-gl100.rules  README.md  pyproject.toml  requirements.txt  run.sh
docs/: protocol.md  upload_download_analysis.md
reverse_engineering/: REVERSE_ENGINEERING.md  gl100-small.pcapng.7z  gl100.pcapng.7z  gl100.txt  gl100_small.txt
reverse_engineering/tools/: analyze_latest.py  analyze_play_commands.py  analyze_wav_bytes.py  analyze_windows_values.py  check_first_chunk_structure.py  compare_files.py  compare_final.py  debug_download.py  debug_raw_bytes.py  download_and_verify.py  download_slot4.py  extract_asar.py  extract_asar_v3.py  find_alignment.py  find_asar_v2.py  find_offset.py  recalculate_chunks.py  test_audio_format.py  test_communication.py  test_delete_before_upload.py  test_device_state.py  test_download_cmd.py  test_download_debug.py  test_durations.py  test_fixed_download.py  test_multiple_chunks.py  test_parse_audio.py  test_play.py  test_scipy_write.py  test_simple_command.py  test_skip_values.py  test_slot_comparison.py  verify_complete_fix.py  verify_fix.py  verify_fix_v2.py
scripts/: analyze_response.py  compare_wav_files.py  diagnose_size.py  find_device.py
src/gl100/: __init__.py  gui.py  main.py  protocol.py  usb_device.py
tests/: test_protocol.py
